docs/v0.2.0a42/_sources/reference/_autosummary/hpcflow.sdk.core.task_schema.TaskSchema.rst.txt
hpcflow.sdk.core.task\_schema.TaskSchema
========================================

.. currentmodule:: hpcflow.sdk.core.task_schema

.. autoclass:: TaskSchema
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:
   
   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~TaskSchema.from_json_like
      ~TaskSchema.get_by_key
      ~TaskSchema.get_key
      ~TaskSchema.get_parameter_dependence
      ~TaskSchema.ignore_invalid_actions
      ~TaskSchema.make_persistent
      ~TaskSchema.to_dict
      ~TaskSchema.to_json_like
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~TaskSchema.input_types
      ~TaskSchema.name
      ~TaskSchema.output_types
      ~TaskSchema.provides_parameters
      ~TaskSchema.task_template
   
   